# bid-tracker-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-prod  LICENSE  Makefile  README.md  build-docker.sh  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: linters.yml  linux.yml
examples/: simple.rs
src/: config.rs  errors.rs  main.rs
src/api/: custom_error_handler.rs  handler.rs  mod.rs  response.rs  routes.rs
src/bidtracker/: bid_management.rs  bid_tracker.rs  mod.rs
tests/: test.py
tests/data/: test.env
