[package]
name = "bid_tracker_rs"
version = "0.1.0"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Write some description for your project here."
documentation = "https://docs.rs/bid-tracker-rs"
homepage = "https://github.com/ansrivas/bid-tracker-rs"
repository = "https://github.com/ansrivas/bid-tracker-rs"
readme = "README.md"
keywords = ["some-awesome-keywords"]
license = "mit"
categories = ["category keywords"]
edition="2018"

[[bin]]
name = "bid-tracker-rs"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"

## Error Handling
anyhow = "1.0.31"
thiserror = "1.0.20"

ctrlc = { version = "3.1.5", features = ["termination"] }

## Logging
env_logger = "0.7.1"
pretty_env_logger= "0.4.0"
log = "0.4.8"

## Actix web related stuff
futures = "0.3.5"
actix-web = "3.0.1"
actix-rt = "1.1.1"

## Configuration
envy = "0.4.1"
dotenv = "0.15.0"

[dev-dependencies]
