[package]
name = "bid_tracker_rs"
version = "0.3.0"
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
description = "Write some description for your project here."
documentation = "https://docs.rs/bid-tracker-rs"
homepage = "https://github.com/ansrivas/bid-tracker-rs"
repository = "https://github.com/ansrivas/bid-tracker-rs"
readme = "README.md"
keywords = ["some-awesome-keywords"]
license = "mit"
categories = ["category keywords"]
edition = "2021"

[[bin]]
name = "bid-tracker-rs"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
## Error Handling
anyhow = "1.0"
thiserror = "1.0"

ctrlc = { version = "3.1", features = ["termination"] }

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


## Actix web related stuff
actix-web = "4.0.0-rc.2"

## Configuration
envy = "0.4"
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2"
